[package]
version = "0.2.0"
edition = "2018"
name = "refcount-interner"
description = "A simple reference-counted interning library for strings, slices, and other data"

license = "MIT OR Apache-2.0"
authors = ["Ferdinand Bachmann <theferdi265@gmail.com>"]
repository = "https://github.com/Ferdi265/refcount_interner"
readme = "README.md"

keywords = ["interning", "hash", "refcount", "rc", "arc"]
categories = ["caching"]

[dependencies]
